# nexradaws

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  codecov.yml  nexradaws.ipynb  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
docker_devel/2.7/: Dockerfile  docker-compose.dev.yml  environment.yml  requirements_devel.txt
docker_devel/3.6/: Dockerfile  docker-compose.dev.yml  environment.yml  requirements_devel.txt
docs/: Makefile  make.bat
docs/source/: Tutorial.ipynb  apidocs.rst  code.rst  conf.py  index.rst  installation.rst  intro.rst  readthedocs-environment.yml  tutorial.rst
docs/source/_static/: .gitkeep
examples/: download.py  example.py
nexradaws/: __init__.py  nexradaws.py  nexradawsinterface.py  query.py
nexradaws/resources/: awsnexradfile.py  downloadresults.py  localnexradfile.py  nexradawsfile.py
nexradaws/responses/: nexradawsfile.py
tests/: test_downloadResults.py  test_nexradAwsFile.py  test_nexradAwsInterface.py  test_nexradQuery.py
