[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexradaws"
version = "2.0.0"
description = "Query and download NEXRAD data from AWS S3 storage."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Aaron Anderson"}
]
license = "MIT"
keywords = ["weather", "radar", "nexrad", "aws", "amazon"]
dependencies = [
    "boto3",
    "pytz"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://nexradaws.readthedocs.io/en/latest/"
Documentation = "https://nexradaws.readthedocs.io/en/latest/"
Repository = "https://github.com/aarande/nexradaws"
Issues = "https://github.com/aarande/nexradaws/issues"

[project.optional-dependencies]
pyart = ["arm_pyart"]

[tool.setuptools.packages.find]
where = ["."]
